--- a/index.html
+++ b/index.html
@@ -3,34 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <!-- Make meta tags for each page --> 
+    <!-- Favicon once logo is decided -->
+    <link rel="stylesheet" href="resources/styles/styles.css">
+    <link rel="stylesheet" href="resources/styles/index.css">
+    <script src="resources/script/script.js" defer></script>
     <title>TeenTasker - Listings in Plainview</title>
+    <!-- make the "plainview" dynamic for the location or change title to "listings for you" or nothing or something else-->
 </head>
-<!-- What we need to do today
--> name
--> description 
--> start the website
--> from name and desc determine a logo and theme -->
+<!-- Modal for business/looking and signin/login or separate screens? -->
 <body>
-    <header>
-        <div class="logo"><img src="" alt=""></div>
-        <nav>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <div class="navbar-logo">
+            <a href="index.html">
+                <img src="resources/images/logo.png" alt="Blue backpack logo with a white outline.">
+            </a>
+        </div>
+        <ul class="navbar-links">
+            <li class="job-listings">
+                <a href="pages/job-listings.html"></a>
+            </li>
+            <li class="tutoring">
+                <a href="pages/tutoring.html"></a>
+            </li>
+            <li class="about"></li>
+                <a href="pages/about.html"></a>
+            </li>
+            <li class="contact">
+                <a href="pages/contact.html"></a>
+            </li>
+            <li class="account">
+                <a href="pages/account.html">
+                    <img src="" alt="">
+                </a>
+            </li>
+        </ul>
+    </nav>
     <main>
-        <div class="section-1"></div>
-        <div class="section-2"></div>
-        <div class="section-3"></div>
-        <div class="section-4"></div>
-        <div class="section-5"></div>
-        <div class="section-6"></div>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
+        <section class=""></section>
     </main>
     <footer></footer>
 </body>
